fix: Gradle build.gradle.kts file🫸🌀✏️📗🐧🐳⬆